@startuml
class EstudanteRepository {
    + EstudanteRepository(context:ApplicationContext)
    + EstudanteRepository()
    + <<async>> GetEstudanteByUserId(userId:long?) : Task<Estudante>
}
class "BaseRepository"<T> {
}
"BaseRepository" "<Estudante>" <|-- EstudanteRepository
IEstudanteRepository <|-- EstudanteRepository
@enduml
